--- a/templates/accounts/forget_password.html
+++ b/templates/accounts/forget_password.html
@@ -7,7 +7,7 @@
                     <div class="breadcrumb-content">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">Register</li>
+                            <li class="active">Password Reset</li>
                         </ul>
                     </div>
                 </div>
