--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -221,39 +221,29 @@
                                         <li class="hm-minicart">
                                             <div class="hm-minicart-trigger">
                                                 <span class="item-icon"></span>
-                                                <span class="item-text">£160
-                                                    <span class="cart-item-count">2</span>
+                                                <span class="item-text">£{{totall}}
+                                                    <span class="cart-item-count">{{len_cart }}</span>
                                                 </span>
                                             </div>
                                             <span></span>
                                             <div class="minicart">
                                                 <ul class="minicart-product-list">
+                                                    {% for i in cart_all %}
                                                     <li>
                                                         <a href="single-product.html" class="minicart-product-image">
-                                                            <img src="{% static 'images/product/small-size/3.jpg' %}" alt="cart products">
+                                                            <img src="{{i.product.prod_image.url}}" alt="cart products">
                                                         </a>
                                                         <div class="minicart-product-details">
                                                             <h6><a href="single-product.html">Aenean eu tristique</a></h6>
-                                                            <span>£80 x 1</span>
+                                                            <span>£{{i.product.new_price}} x {{i.quantity}}</span>
                                                         </div>
                                                         <button class="close">
                                                             <i class="fa fa-close"></i>
                                                         </button>
                                                     </li>
-                                                    <li>
-                                                        <a href="single-product.html" class="minicart-product-image">
-                                                            <img src="{% static 'images/product/small-size/4.jpg' %}" alt="cart products">
-                                                        </a>
-                                                        <div class="minicart-product-details">
-                                                            <h6><a href="single-product.html">Aenean eu tristique</a></h6>
-                                                            <span>£80 x 1</span>
-                                                        </div>
-                                                        <button class="close">
-                                                            <i class="fa fa-close"></i>
-                                                        </button>
-                                                    </li>
+                                                    {% endfor %}
                                                 </ul>
-                                                <p class="minicart-total">SUBTOTAL: <span>£160</span></p>
+                                                <p class="minicart-total">SUBTOTAL: <span>£{{totall}}</span></p>
                                                 <div class="minicart-button">
                                                     <a href="checkout.html" class="li-button li-button-dark li-button-fullwidth li-button-sm">
                                                         <span>View Full Cart</span>
@@ -290,10 +280,10 @@
                                             <li><a href="about-us.html">About Us</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                             {% if user.is_authenticated %}
-                                            <li><a href="">{{user.username}}</a></li>
+                                            <li style="margin-left:19px;"><a href="">{{user.username}}</a></li>
                                             <li><a href="{% url 'sing_out' %}">Sing Out</a></li>
                                             {% else %}
-                                            <li><a href="{% url 'singin' %}">Sing In</a></li>
+                                            <li style="margin-left:19px;"><a href="{% url 'singin' %}">Sing In</a></li>
                                             <li><a href="{% url 'singup' %}">Sing Up</a></li>
                                             {% endif %}
                                             <!-- Begin Header Bottom Menu Information Area -->
